--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,1 +1,7 @@
 urlHome = https://opencart.abstracta.us/index.php?route=common/home
+reportPath = /reports/index.html
+sizeResolution = 1280,720
+reportName = Web Automation Results
+documentTitle = Test Results
+rol = Tester
+nameManager = Jorge Sanchez
